check authentication on main activity instead of auth activity.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,17 +24,19 @@
         <activity
             android:name=".MainActivity"
             android:configChanges="uiMode"
-            android:exported="false"
             android:label="@string/title_activity_main"
-            android:theme="@style/Theme.TrafficFlow.NoActionBar" />
-        <activity
-            android:name=".auth.View.AuthActivity"
+            android:theme="@style/Theme.TrafficFlow.NoActionBar"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity
+            android:name=".auth.View.AuthActivity"
+            android:exported="true">
+
         </activity>
     </application>
 
