--- a/app/build.gradle
+++ b/app/build.gradle
@@ -65,6 +65,7 @@ dependencies {
 
     // Glide
     implementation 'com.github.bumptech.glide:glide:4.13.0'
+    implementation 'androidx.lifecycle:lifecycle-service:2.4.1'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.13.0'
 
 
