add false reports, post location data and more.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,8 +7,7 @@
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_BACKGROUND_LOCATION" />
-
-    <uses-permission android:name="android.permission.FOREGROUND_SERVICE"/>
+    <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
 
     <application
         android:allowBackup="true"
@@ -18,10 +17,14 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.TrafficFlow"
         android:usesCleartextTraffic="true">
+        <activity
+            android:name=".FalseReportActivity"
+            android:exported="false" />
+
         <service
             android:name=".services.TripModeService"
             android:enabled="true"
-            android:exported="true"></service>
+            android:exported="true" />
 
         <activity
             android:name=".EditProfileActivity"
